infrastructure/kubernetes/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: interview-web
  namespace: staging
spec:
  hosts:
    - interview.local
  http:
    - route:
        - destination:
            host: interview-web
            port:
              number: 3000
          weight: 90
        - destination:
            host: interview-web-canary
            port:
              number: 3000
          weight: 10
